--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🌿 Terp Connoisseur</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="light">
   <div class="container">
     <h1>🌿 Terp Connoisseur</h1>
-    <button id="modeToggle">🌞</button>
+
+    <div id="modeToggle" class="toggle">
+      <span id="sun">🌞</span>
+      <span id="moon">🌙</span>
+    </div>
+
     <input type="text" id="searchInput" placeholder="🔍 Strain oder Produkt eingeben" />
     <div id="results"></div>
     <div id="progress"></div>
+
+    <p class="disclaimer">
+      🧪 For connoisseurs only. Data is based on public sources and may not be 100% accurate.
+    </p>
   </div>
+
   <script src="data.js"></script>
   <script src="progress.js"></script>
   <script src="script.js"></script>
