--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
   <div class="container">
     <h1>🌿 Terp Connoisseur</h1>
 
-    <div id="modeToggle" class="toggle">
-      <span id="sun">🌞</span>
-      <span id="moon">🌙</span>
-    </div>
+<div class="mode-switch">
+  <label for="modeToggle">🌓 Darkmode:</label>
+  <div id="modeToggle" class="toggle">
+    <span id="sun">🌞</span>
+    <span id="moon">🌙</span>
+  </div>
+</div>
+
 
     <input type="text" id="searchInput" placeholder="🔍 Strain oder Produkt eingeben" />
     <div id="results"></div>
