--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>🌿 Terp Connoisseur</h1>
 
 <div class="mode-switch">
-  <label for="modeToggle">🌓 Darkmode:</label>
-  <div id="modeToggle" class="toggle">
+  <label for="modeToggle">🌓 Darkmode:</label><br />
+  <div id="modeToggle" class="toggle centered">
     <span id="sun">🌞</span>
     <span id="moon">🌙</span>
   </div>
