--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
   <div class="container">
     <h1>🌿 Terp Connoisseur</h1>
 
-<div class="mode-switch">
-  <label for="modeToggle">🌓 Darkmode:</label><br />
-  <div id="modeToggle" class="toggle centered">
-    <span id="sun">🌞</span>
-    <span id="moon">🌙</span>
-  </div>
-</div>
+    <!-- 🌞🌙 Darkmode-Toggle -->
+    <div class="mode-switch">
+      <label for="modeToggle">🌓 Darkmode:</label><br />
+      <div id="modeToggle" class="toggle centered">
+        <span id="sun">🌞</span>
+        <span id="moon">🌙</span>
+      </div>
+    </div>
 
-
+    <!-- Suchfeld -->
     <input type="text" id="searchInput" placeholder="🔍 Strain oder Produkt eingeben" />
+
+    <!-- Ergebnisse -->
     <div id="results"></div>
+
+    <!-- Fortschritt -->
     <div id="progress"></div>
 
+    <!-- Disclaimer -->
     <p class="disclaimer">
       🧪 For connoisseurs only. Data is based on public sources and may not be 100% accurate.
     </p>
