--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <h1>🌿 Terp Connoisseur</h1>
 
     <!-- 🌞🌙 Darkmode-Toggle -->
-    <div class="mode-switch">
-      <label for="modeToggle">🌓 Darkmode:</label><br />
-      <div id="modeToggle" class="toggle centered">
-        <span id="sun">🌞</span>
-        <span id="moon">🌙</span>
-      </div>
-    </div>
+<div class="mode-switch left">
+  <label for="modeToggle">🌓 Darkmode:</label>
+  <div id="modeToggle" class="toggle stacked">
+    <span id="sun">🌞</span>
+    <span id="moon">🌙</span>
+  </div>
+</div>
+
 
     <!-- Suchfeld -->
     <input type="text" id="searchInput" placeholder="🔍 Strain oder Produkt eingeben" />
