--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <h1>🌿 Terp Connoisseur</h1>
 
     <!-- 🌞🌙 Darkmode-Toggle -->
-<div class="mode-switch left">
+<div class="mode-switch">
   <label for="modeToggle">🌓 Darkmode:</label>
-  <div id="modeToggle" class="toggle stacked">
+  <div id="modeToggle" class="toggle horizontal">
     <span id="sun">🌞</span>
     <span id="moon">🌙</span>
   </div>
 </div>
+
 
 
     <!-- Suchfeld -->
