--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- 🌞🌙 Darkmode-Toggle -->
 <div class="mode-switch">
   <label for="modeToggle">🌓 Darkmode:</label>
-  <div id="modeToggle" class="toggle horizontal">
+  <div id="modeToggle" class="toggle">
     <span id="sun">🌞</span>
     <span id="moon">🌙</span>
   </div>
