--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body class="light">
   <div class="container">
     <h1>🌿 Terp Connoisseur</h1>
+<p class="subtitle">
+  <strong>A searchable terpene database for cannabis strains &amp; medical products. Built for connoisseurs!</strong><br>
+  <span class="subtext">
+    Explore strain profiles, effects, flavors, and vaporization temps – all in one clean tool.<br>
+    🌿 Strains &nbsp;&nbsp; 🌸 Terpenes &nbsp;&nbsp; 💨 Temps
+  </span>
+</p>
 
     <!-- 🌞🌙 Darkmode-Toggle -->
     <div class="mode-switch">
