--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body class="light">
   <div class="container">
+    <!-- Titel -->
     <h1>🌿 Terp Connoisseur</h1>
-    
-<p class="subtitle">
-  <strong>A searchable terpene database for cannabis strains &amp; medical products. Built for connoisseurs!</strong><br>
-  <span class="subtext">
-    Explore strain profiles, effects, flavors, and vaporization temps – all in one clean tool.<br>
-    🌿 Strains &nbsp;&nbsp; 🌸 Terpenes &nbsp;&nbsp; 💨 Temps
-  </span>
-</p>
+
+    <!-- Beschreibung -->
+    <p class="subtitle">
+      <strong>A searchable terpene database for cannabis strains &amp; medical products. Built for connoisseurs!</strong><br>
+      <span class="subtext">
+        Explore strain profiles, effects, flavors, and vaporization temps – all in one clean tool.<br>
+        🌿 Strains &nbsp;&nbsp; 🌸 Terpenes &nbsp;&nbsp; 💨 Temps
+      </span>
+    </p>
 
     <!-- 🌞🌙 Darkmode-Toggle -->
     <div class="mode-switch">
@@ -42,6 +44,7 @@
     </p>
   </div>
 
+  <!-- Scripts -->
   <script src="data.js"></script>
   <script src="progress.js"></script>
   <script src="script.js"></script>
