--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <!-- Beschreibung -->
     <p class="subtitle">
-      <strong>A searchable terpene database for cannabis strains &amp; medical products. Built for connoisseurs!</strong><br>
+      <strong>A searchable terpene database for cannabis strains &amp; medical products.</strong><br>
       <span class="subtext">
-        Explore strain profiles, effects, flavors, and vaporization temps – all in one clean tool.<br>
+        Explore strain profiles, effects, flavors, and vaporization temps – all in one clean tool!<br>
         🌿 Strains &nbsp;&nbsp; 🌸 Terpenes &nbsp;&nbsp; 💨 Temps
       </span>
     </p>
