--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>🌿 Terp Connoisseur</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="light">
+<body class="dark">
   <div class="container">
     <!-- Titel -->
     <h1>🌿 Terp Connoisseur</h1>
