--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- 🌞🌙 Darkmode-Toggle -->
     <div class="mode-switch">
-      <label for="modeToggle">🌓 Darkmode:</label>
+      <label for="modeToggle">🌓 Mode:</label>
       <div id="modeToggle" class="toggle">
         <span id="sun">🌞</span>
         <span id="moon">🌙</span>
