--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
 </head>
 <body class="dark">
   <div class="container">
-    <!-- Titel -->
     <h1>🌿 Terp Connoisseur</h1>
 
     <!-- Beschreibung -->
     <p class="subtitle">
-      <strong>A searchable terpene database for cannabis strains &amp; medical products.</strong><br>
+      <strong>A searchable terpene database for cannabis strains &amp; medical products. Built for connoisseurs!</strong><br>
       <span class="subtext">
-        Explore strain profiles, effects, flavors, and vaporization temps – all in one clean tool!<br>
+        Explore strain profiles, effects, flavors, and vaporization temps – all in one clean tool.<br>
         🌿 Strains &nbsp;&nbsp; 🌸 Terpenes &nbsp;&nbsp; 💨 Temps
       </span>
     </p>
 
     <!-- 🌞🌙 Darkmode-Toggle -->
     <div class="mode-switch">
-      <label for="modeToggle">🌓 Mode:</label>
+      <label for="modeToggle">🌓 Darkmode:</label>
       <div id="modeToggle" class="toggle">
         <span id="sun">🌞</span>
         <span id="moon">🌙</span>
@@ -44,7 +43,7 @@
     </p>
   </div>
 
-  <!-- Scripts -->
+  <!-- Scripts (Reihenfolge ist wichtig!) -->
   <script src="data.js"></script>
   <script src="progress.js"></script>
   <script src="script.js"></script>
