--- a/index.html
+++ b/index.html
@@ -1,51 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🌿 Terp Connoisseur</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body class="dark">
-  <div class="container">
-    <h1>🌿 Terp Connoisseur</h1>
-
-    <!-- Beschreibung -->
-    <p class="subtitle">
-      <strong>A searchable terpene database for cannabis strains &amp; medical products.</strong><br>
-      <span class="subtext">
-        Explore strain profiles, effects, flavors, and vaporization temps – all in one tool.<br>
-        🌿 Strains &nbsp;&nbsp; 🌸 Terpenes &nbsp;&nbsp; 💨 Temps
-      </span>
-    </p>
-
-    <!-- 🌞🌙 Darkmode-Toggle -->
-    <div class="mode-switch">
-      <label for="modeToggle">🌓 Mode:</label>
-      <div id="modeToggle" class="toggle">
-        <span id="sun">🌞</span>
-        <span id="moon">🌙</span>
-      </div>
-    </div>
-
-    <!-- Suchfeld -->
-    <input type="text" id="searchInput" placeholder="🔍 Strain oder Produkt eingeben" />
-
-    <!-- Ergebnisse -->
-    <div id="results"></div>
-
-    <!-- Fortschritt -->
-    <div id="progress"></div>
-
-    <!-- Disclaimer -->
-    <p class="disclaimer">
-      🧪 For connoisseurs only. Data is based on public sources and may not be 100% accurate.
-    </p>
-  </div>
-
-  <!-- Scripts in richtiger Reihenfolge -->
-  <script src="data.js"></script>
-  <script src="progress.js"></script>
-  <script src="script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Terp</title></head><body>Test</body></html>
