--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!DOCTYPE html><html><head><title>Terp</title></head><body>Test</body></html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>🌿 Terp Connoisseur</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>🌿 Terp Connoisseur</h1>
+    <button id="modeToggle">🌞</button>
+    <input type="text" id="searchInput" placeholder="🔍 Strain oder Produkt eingeben" />
+    <div id="results"></div>
+    <div id="progress"></div>
+  </div>
+  <script src="data.js"></script>
+  <script src="progress.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
